# Internship-Notifier

./: .gitignore  README.md  env.example  notifier.toml  pyproject.toml
.github/: company-prestige-cache.json  internship-notifier-state.json
.github/workflows/: ci.yml  notifier.yml
docs/: company-prestige-rankings.md
src/internship_notifier/: __init__.py  __main__.py  cli.py  config_toml.py  email_format.py  filters.py  github_listings.py  prestige.py  prestige_ranker.py  prestige_report.py  smtp_notify.py  state.py
tests/: test_cli.py  test_config_toml.py  test_email_format.py  test_filters.py  test_github_listings.py  test_prestige.py  test_prestige_ranker.py  test_prestige_report.py  test_smtp_notify.py  test_state.py
